--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.14",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.3",
     "@types/parse-link-header": "^1.0.0",
