--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/enzyme": "^3.1.14",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.2",
+    "@types/moxios": "^0.4.8",
     "@types/node": "^10.11.3",
     "@types/parse-link-header": "^1.0.0",
     "@types/react": "^16.4.14",
